--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "build:sanity:staging": "rm -rf packages/sanity-suite/dist && nx run-many --targets=build:all:staging --parallel=false --projects=@rudderstack/analytics-js-sanity-suite",
     "bump-version:monorepo": "npm version prerelease --git-tag-version false",
     "release": "nx affected --base=origin/main --target=version --parallel=1 --skipCommitTypes=docs,ci,chore,test",
-    "release:nx": "nx release --skip-publish --parallel=1 --skipCommitTypes=docs,ci,chore,test",
-    "release:github": "nx affected --target=github --parallel=1 --skipCommitTypes=docs,ci,chore,test --dry-run",
+    "release:nx": "nx release --skip-publish --verbose --dry-run",
+    "release:github": "nx affected --target=github --parallel=1 --skipCommitTypes=docs,ci,chore,test",
     "deploy:npm": "nx affected --target=deploy --parallel=1 --skipCommitTypes=docs,ci,chore,test",
     "build:browser:LH": "nx run @rudderstack/analytics-js:build-browser && nx run @rudderstack/analytics-js:build-browser-modern"
   },
