--- a/.github/workflows/deploy-beta-v3.yml
+++ b/.github/workflows/deploy-beta-v3.yml
@@ -13,10 +13,13 @@ env:
 jobs:
   deploy-tag:
     name: Deploy BETA/BugBash Feature v3
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64]
     if: startsWith(github.ref, 'refs/heads/beta/') || startsWith(github.ref, 'refs/tags/bugbash')
 
     steps:
+      - name: Install AWS cli
+        uses: unfor19/install-aws-cli-action@master
+
       - name: Extract feature name from branch
         id: extract_branch
         shell: bash
