--- a/.github/workflows/rollback-v3.yml
+++ b/.github/workflows/rollback-v3.yml
@@ -13,10 +13,13 @@ env:
 jobs:
   deploy-tag:
     name: Rollback v3
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64]
     if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/main')
 
     steps:
+      - name: Install AWS cli
+        uses: unfor19/install-aws-cli-action@master
+        
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
