--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   build:
     name: 'Unit Tests, Coverage & Sonar v3'
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64]
 
     steps:
       - name: Checkout
@@ -51,7 +51,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          
+
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
         env:
