chore(monorepo): update dev dependencies, nx to v18 & prepare nx release config (#1624)

--- a/nx.json
+++ b/nx.json
@@ -4,6 +4,19 @@
     "libsDir": "packages"
   },
   "defaultBase": "main",
+  "release": {
+    "projects": ["*"],
+    "projectsRelationship": "independent",
+    "releaseTagPattern": "{projectName}@{version}",
+    "version": {
+      "conventionalCommits": true
+    },
+    "changelog": {
+      "projectChangelogs": {
+        "createRelease": "github"
+      }
+    }
+  },
   "pluginsConfig": {
     "@nx/js": {
       "analyzeSourceFiles": true
