fix: eslint ignore file

--- a/.eslintignore
+++ b/.eslintignore
@@ -11,7 +11,7 @@ stats/
 *.config.js
 examples/chrome-extension/**/rudderAnalytics.js
 examples/chrome-extension/**/foreground.js
-/integrations/Ninetailed/sample-app/*
+/integrations/Ninetailed/sample-app/
 testBookSuites/
 tsconfig.build.tsbuildinfo
 nativeSdkLoader.js
