--- a/.prettierignore
+++ b/.prettierignore
@@ -12,7 +12,7 @@ CONTRIBUTING.md
 examples/chrome-extension/**/rudderAnalytics.js
 examples/chrome-extension/**/foreground.js
 examples/**/index.html
-**/integrations/Ninetailed/sample-app/*
+**/integrations/Ninetailed/sample-app/
 **/public/index.html
 
 /.nx/cache
