--- a/package.json
+++ b/package.json
@@ -144,7 +144,7 @@
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
     "commitlint": "18.6.1",
-    "component-type": "1.2.1",
+    "component-type": "2.0.0",
     "core-js": "3.36.0",
     "dotenv": "16.4.5",
     "each": "2.6.0",
@@ -206,7 +206,8 @@
   },
   "overrides": {
     "debug": "4.3.4",
-    "ip": "2.0.1"
+    "ip": "2.0.1",
+    "component-type": "2.0.0"
   },
   "lint-staged": {
     "*.{json,js,md,ts}": "prettier --write"
