--- a/packages/analytics-js/tsconfig.spec.json
+++ b/packages/analytics-js/tsconfig.spec.json
@@ -8,7 +8,8 @@
     "inlineSourceMap": true,
     "isolatedModules": true,
     "verbatimModuleSyntax": false,
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "target": "es6"
   },
   "include": [
     "jest.config.mjs",
