feat: onboard new destination ninetailed (#1617)
* feat: onboard new destination ninetailed

* chore: added test cases and addressed comments

* chore: removed sample-app from analysis

* fix: remove eslint check sample app

* fix: eslint ignore file

* fix: eslint ignore file path from root

* Update .eslintignore

Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

---------

Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

--- a/.prettierignore
+++ b/.prettierignore
@@ -12,6 +12,7 @@ CONTRIBUTING.md
 examples/chrome-extension/**/rudderAnalytics.js
 examples/chrome-extension/**/foreground.js
 examples/**/index.html
+packages/analytics-js-integrations/src/integrations/Ninetailed/sample-app/
 **/public/index.html
 
 /.nx/cache
