--- a/.eslintignore
+++ b/.eslintignore
@@ -15,4 +15,5 @@ testBookSuites/
 tsconfig.build.tsbuildinfo
 nativeSdkLoader.js
 nativeSdkLoader.ts
+packages/analytics-js-integrations/src/integrations/Ninetailed/sample-app/
 assets/
