chore: add ninetailed example apps

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,10 +28,10 @@ sonar.test.inclusions=**/__tests__/**/*
 sonar.test.exclusions=**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg
 
 # Coverage config
-sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*,**/integrations/Ninetailed/sample-app/*
+sonar.coverage.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/*.json,**/*.html,**/*.png,**/*.jpg,**/*.gif,**/*.svg,**/nativeSdkLoader.js,assets/**/*
 
 # Source encoding
 sonar.sourceEncoding=UTF-8
 
 # Exclusions for copy-paste detection
-sonar.cpd.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/nativeSdkLoader.js,assets/**/*,**/integrations/Ninetailed/sample-app/*
+sonar.cpd.exclusions=**/__tests__/**/*,__mocks__/**/*,**/__mocks__/**/*,**/__fixtures__/**/*,**/sanity-suite/**/*,examples/**/*,**/nativeSdkLoader.js,assets/**/*
