--- a/.github/workflows/create-hotfix-branch.yml
+++ b/.github/workflows/create-hotfix-branch.yml
@@ -1,4 +1,4 @@
-name: Create new hotfix branch v3
+name: Create a new hotfix branch
 
 on:
   workflow_dispatch:
@@ -9,8 +9,8 @@ on:
 
 jobs:
   create-branch:
-    name: Create new hotfix branch v3
-    runs-on: ubuntu-latest
+    name: Create a new hotfix branch
+    runs-on: [self-hosted, Linux, X64]
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Create branch
@@ -18,4 +18,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          branch: 'v3-hotfix/${{ github.event.inputs.hotfix_name }}'
+          branch: 'hotfix/${{ github.event.inputs.hotfix_name }}'
