--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -1,4 +1,4 @@
-name: Deploy to NPM v3
+name: Deploy to NPM
 
 on:
   workflow_dispatch:
@@ -16,8 +16,8 @@ env:
 
 jobs:
   deploy-tag:
-    name: Deploy to NPM v3
-    runs-on: ubuntu-latest
+    name: Deploy to NPM
+    runs-on: [self-hosted, Linux, X64]
     if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/main') || github.event.pull_request.merged == true
 
     steps:
@@ -103,39 +103,6 @@ jobs:
               ]
             }
 
-      - name: Send message to Slack channel for v1.1
-        id: slackv1
-        uses: slackapi/slack-github-action@v1.25.0
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-          PROJECT_NAME: 'JS SDK v1.1 NPM Package'
-          NPM_PACKAGE_URL: 'https://www.npmjs.com/package/rudder-sdk-js'
-        with:
-          channel-id: ${{ secrets.SLACK_RELEASE_CHANNEL_ID }}
-          payload: |
-            {
-              "blocks": [
-                {
-                  "type": "header",
-                  "text": {
-                    "type": "plain_text",
-                    "text": "New release: ${{ env.PROJECT_NAME }}"
-                  }
-                },
-                {
-                  "type": "divider"
-                },
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "*Release: <${{ env.NPM_PACKAGE_URL }}|${{ env.CURRENT_VERSION_V1_VALUE }}>*\n${{ env.DATE }}"
-                  }
-                }
-              ]
-            }
-
-
       - name: Send message to Slack channel for Service Worker
         id: slackSw
         uses: slackapi/slack-github-action@v1.25.0
@@ -163,6 +130,38 @@ jobs:
                   "text": {
                     "type": "mrkdwn",
                     "text": "*Release: <${{ env.NPM_PACKAGE_URL }}|${{ env.CURRENT_VERSION_SW_VALUE }}>*\n${{ env.DATE }}"
+                  }
+                }
+              ]
+            }
+
+      - name: Send message to Slack channel for v1.1
+        id: slackv1
+        uses: slackapi/slack-github-action@v1.25.0
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+          PROJECT_NAME: 'JS SDK v1.1 NPM Package'
+          NPM_PACKAGE_URL: 'https://www.npmjs.com/package/rudder-sdk-js'
+        with:
+          channel-id: ${{ secrets.SLACK_RELEASE_CHANNEL_ID }}
+          payload: |
+            {
+              "blocks": [
+                {
+                  "type": "header",
+                  "text": {
+                    "type": "plain_text",
+                    "text": "New release: ${{ env.PROJECT_NAME }}"
+                  }
+                },
+                {
+                  "type": "divider"
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "*Release: <${{ env.NPM_PACKAGE_URL }}|${{ env.CURRENT_VERSION_V1_VALUE }}>*\n${{ env.DATE }}"
                   }
                 }
               ]
