--- a/.github/workflows/draft-new-release.yml
+++ b/.github/workflows/draft-new-release.yml
@@ -1,4 +1,4 @@
-name: Draft new release v3
+name: Draft a new release
 
 on:
   workflow_dispatch:
@@ -8,11 +8,11 @@ env:
 
 jobs:
   draft-new-release:
-    name: Draft a new release v3
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/heads/develop') || startsWith(github.ref, 'refs/heads/v3-hotfix/')
+    name: Draft a new release
+    runs-on: [self-hosted, Linux, X64]
+    if: startsWith(github.ref, 'refs/heads/develop') || startsWith(github.ref, 'refs/heads/hotfix/')
     steps:
-      - name: Checkout source branch
+      - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -43,8 +43,8 @@ jobs:
           HUSKY: 0
         run: |
           source_branch_name=${GITHUB_REF##*/}
-          release_type=v3-release
-          grep -q "v3-hotfix/" <<< "${GITHUB_REF}" && release_type=v3-hotfix-release
+          release_type=release
+          grep -q "hotfix/" <<< "${GITHUB_REF}" && release_type=hotfix-release
           git fetch origin main
           git fetch --tags origin
           git merge origin/main
@@ -100,4 +100,4 @@ jobs:
           github_token: ${{ secrets.PAT }}
           pr_title: 'chore(release): pulling ${{ steps.create-release.outputs.branch_name }} into main'
           pr_body: ':crown: *An automated PR*'
-          pr_reviewer: 'bardisg,MoumitaM,saikumarrs'
+          pr_reviewer: 'MoumitaM,saikumarrs'
